--- a/style.css
+++ b/style.css
@@ -1,1 +1,177 @@
-.
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+header {
+  padding: 10px;
+  text-align: center;
+  box-shadow: #909090 0px 0.5px 10px 0px;
+  margin-bottom: 5px;
+}
+header img {
+  width: 30%;
+}
+
+.section__location {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(234, 234, 234);
+  width: 100vw;
+}
+.section i {
+  margin-right: 15px;
+}
+.section__explore {
+  background-color: rgb(249, 249, 249);
+  margin: 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section__explore h3 {
+  margin-top: 30px;
+}
+.section__explore p {
+  width: 80vw;
+  text-align: center;
+  line-height: 20px;
+  color: rgb(48, 48, 48);
+  margin-bottom: 30px;
+  font-weight: 400;
+}
+.section__explore button {
+  margin-bottom: 40px;
+  padding: 12px 20px;
+  border-radius: 30px;
+  border: none;
+  color: white;
+  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  box-shadow: #8f8e8e 1px 3px 30px 0px;
+}
+
+.section__guide {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 30px 30px 30px 40px;
+}
+.section__guide .step {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(249, 249, 249);
+  padding: 12px;
+  border-radius: 24px;
+  margin-bottom: 25px;
+  color: rgb(48, 48, 48);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.section__guide .step p:first-child {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: #fff;
+  margin-left: -28px;
+  width: 32px;
+  height: 32px;
+}
+.section__guide .step i {
+  padding: 20px;
+}
+.section__guide .step .fa-mobile {
+  font-size: 25px;
+}
+.section__guide .step:hover {
+  background-color: rgb(243, 238, 254);
+}
+.section__guide .step:hover i {
+  color: #9356DC;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 5vw;
+}
+main .restaurant {
+  width: 90vw;
+  height: 280px;
+  border-radius: 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin-bottom: 20px;
+  position: relative;
+}
+main .restaurant img {
+  width: 100%;
+  height: 200px;
+  border-radius: 20px 20px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main .restaurant h4 {
+  margin: 12px;
+}
+main .restaurant p {
+  margin: 12px;
+}
+main .restaurant i {
+  position: absolute;
+  top: 220px;
+  font-size: 28px;
+  right: 30px;
+}
+main .restaurant i:hover {
+  cursor: pointer;
+  color: #9356DC;
+}
+main .restaurant span {
+  color: rgb(40, 126, 95);
+  background-color: #99E2D0;
+  border-radius: 4px;
+  padding: 5px 23px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-color: rgb(47, 47, 47);
+  margin-bottom: 0;
+  padding: 5vw;
+}
+footer span:first-child {
+  font-family: "Shrikhand", cursive;
+  color: #fff;
+  margin: 15px 0;
+}
+footer ul {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+footer ul li {
+  margin: 10px 0;
+}
+footer ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+footer ul li a i {
+  margin-right: 10px;
+}/*# sourceMappingURL=style.css.map */
