--- a/style.scss
+++ b/style.scss
@@ -3,8 +3,187 @@ $font_text: 'Shrikhand', cursive;
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
+$background-color: rgb(249, 249, 249);
+$text-color: rgb(48, 48, 48);
 
+@mixin flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+@mixin flex-start {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: $font_logo_titles;
+} 
+body {
+    margin: 0;
+}
 header {
+    padding: 10px;
     text-align: center;
-    background-color: #9356DC;
+    img {
+        width: 30%;
+    }
+    box-shadow: #909090 0px 0.5px 10px 0px;
+    margin-bottom: 5px;
+}
+.section {
+    &__location {
+        @include flex-row();
+        background-color:rgb(234, 234, 234);
+        width: 100vw;
+    }
+    i {
+        margin-right: 15px;
+    }
+    &__explore {
+        background-color: $background-color;
+        margin: 0;
+        width: 100vw;
+        @include flex-column();
+        h3 {
+            margin-top: 30px;
+        }
+        p {
+            width: 80vw;
+            text-align: center;
+            line-height: 20px;
+            color: $text-color;
+            margin-bottom: 30px;
+            font-weight: 400;
+        }
+        button {
+            margin-bottom: 40px;
+            padding: 12px 20px;
+            border-radius: 30px;
+            border: none;
+            color: white;
+            background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
+            box-shadow: #8f8e8e 1px 3px 30px 0px;
+        }
+}
+}
+.section__guide {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 30px 30px 30px 40px;
+    .step {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background-color: $background-color;
+        padding: 12px;
+        border-radius: 24px;
+        margin-bottom: 25px;
+        color: $text-color;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        p:first-child {
+            @include flex-column();
+            border-radius: 50%;
+            background-color: $primary-color;
+            color: #fff;
+            margin-left: -28px;
+            width: 32px;
+            height: 32px;
+        }
+        i {
+            padding: 20px;
+        }
+        .fa-mobile {
+            font-size: 25px;
+        }
+    }
+    .step:hover {
+        background-color:rgb(243, 238, 254);
+        i {
+            color: $primary-color;
+        }
+    }
+}
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 5vw;
+    .restaurant {
+        width: 90vw;
+        height: 280px;
+        border-radius: 20px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        margin-bottom: 20px;
+        position: relative;
+        img {
+            width: 100%;
+            height: 200px;
+            border-radius: 20px 20px 0 0 ;
+            object-fit: cover;
+        }
+        h4 {
+            margin: 12px;
+        }
+        p {
+            margin: 12px;
+        }
+        i {
+            position: absolute;
+            top: 220px;
+            font-size: 28px;
+            right: 30px;
+        }
+        i:hover {
+            cursor: pointer;
+            color: $primary-color;
+            
+        }
+        span {
+            color: rgb(40, 126, 95);
+            background-color: $tertiary-color;
+            border-radius: 4px;
+            padding: 5px 23px;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+    }
+    
+}
+footer {
+    @include flex-start();
+    background-color: rgb(47, 47, 47);
+    margin-bottom: 0;
+    padding: 5vw;
+    span:first-child {
+        font-family: $font_text;
+        color: #fff;
+        margin: 15px 0;
+    }
+    ul {
+        margin: 0;
+        list-style: none;
+        padding: 0;
+        li {
+            margin: 10px 0;
+            a {
+                text-decoration: none;
+                color: #fff;
+                i {
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
 }
