--- a/style.css
+++ b/style.css
@@ -103,8 +103,12 @@ header img {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
   padding: 5vw;
+}
+main a {
+  text-decoration: none;
+  color: black;
 }
 main .restaurant {
   width: 90vw;
@@ -174,4 +178,94 @@ footer ul li a {
 }
 footer ul li a i {
   margin-right: 10px;
+}
+
+.menu-img {
+  width: 100%;
+  height: 200px;
+}
+.menu-img img {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -2;
+}
+
+.menu {
+  border-radius: 35px 35px 0 0;
+  background-color: rgb(249, 249, 249);
+  position: relative;
+  margin-top: -25px;
+  z-index: 1;
+}
+.menu__header {
+  box-shadow: none;
+  padding-bottom: 3px;
+}
+.menu__header i {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  font-size: 20px;
+  color: black;
+}
+.menu h2 {
+  font-family: "Shrikhand", cursive;
+}
+.menu i {
+  position: absolute;
+  top: 45px;
+  right: 45px;
+  font-size: 20px;
+}
+.menu i:hover {
+  color: #9356DC;
+}
+.menu .category {
+  padding-bottom: 5px;
+  font-weight: 100;
+  margin: 20px 0 5px;
+}
+.menu .category:after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 8%;
+  border: 1.5px solid #99E2D0;
+  margin-top: 5px;
+}
+.menu__items {
+  width: 90vw;
+  border-radius: 15px;
+  position: relative;
+  padding: 16px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 6px 0;
+  cursor: pointer;
+}
+.menu__items h4 {
+  margin: 0;
+  margin-bottom: 5px;
+}
+.menu__items p {
+  margin: 0;
+  font-weight: 100;
+}
+.menu__items span {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+}
+
+.btn {
+  width: 40vw;
+  margin: 36px 24vw;
+  padding: 12px 20px;
+  border-radius: 30px;
+  border: none;
+  color: white;
+  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  box-shadow: #8f8e8e 1px 3px 30px 0px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
