--- a/style.scss
+++ b/style.scss
@@ -115,10 +115,12 @@ header {
     }
 }
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    @include flex-start();
     padding: 5vw;
+    a {
+        text-decoration: none;
+        color: black;
+    }
     .restaurant {
         width: 90vw;
         height: 280px;
@@ -186,4 +188,92 @@ footer {
             }
         }
     }
+}
+.menu-img {
+    width: 100%;
+    height: 200px;
+    img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        z-index: -2;
+    }
+}
+.menu {
+    border-radius: 35px 35px 0 0;
+    background-color: $background-color;
+    position: relative;
+    margin-top: -25px;
+    z-index: 1;
+    &__header {
+        box-shadow: none;
+        padding-bottom: 3px;
+        i {
+            position: absolute;
+            top: 10px;
+            left: 20px;
+            font-size: 20px;
+            color: black;
+        }
+    }
+    h2 {
+        font-family: $font_text;
+    }
+    i {
+        position: absolute;
+        top: 45px;
+        right: 45px;
+        font-size: 20px;
+    }
+    i:hover {
+        color: $primary-color;
+    }
+    .category {
+        padding-bottom: 5px ;
+        font-weight: 100;
+        margin: 20px 0 5px;
+    }
+    .category:after {
+        content: '';
+        display: block;
+        position: relative;
+        width: 8%;
+        border: 1.5px solid $tertiary-color;
+        margin-top: 5px;
+    }
+    &__items {
+        width: 90vw;
+        border-radius: 15px;
+        position: relative;
+        padding: 16px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        margin: 6px 0;
+        cursor: pointer;
+
+        h4 {
+            margin: 0;
+            margin-bottom: 5px;
+        }
+        p {
+            margin: 0;
+            font-weight: 100;
+        }
+        span {
+            position: absolute;
+            bottom: 16px;
+            right: 16px;
+        }
+    }
+    
+}
+.btn {
+    width: 40vw;
+    margin: 36px 24vw;
+    padding: 12px 20px;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
+    box-shadow: #8f8e8e 1px 3px 30px 0px;
+    cursor: pointer;
 }
