--- a/style.scss
+++ b/style.scss
@@ -23,11 +23,11 @@ $text-color: rgb(48, 48, 48);
     flex-direction: column;
     justify-content: flex-end;
 }
-
 * {
     box-sizing: border-box;
     font-family: $font_logo_titles;
 } 
+/* Homepage CSS */
 body {
     margin: 0;
 }
@@ -73,8 +73,13 @@ header {
             color: white;
             background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
             box-shadow: #8f8e8e 1px 3px 30px 0px;
-        }
-}
+            &:hover {
+                background-image: none;
+                background-color: rgba($color: #cb6ac2, $alpha: 1);
+                box-shadow: #605f5f 1px 3px 30px 0px;
+            }
+        }   
+    }
 }
 .section__guide {
     display: flex;
@@ -145,12 +150,12 @@ main {
             top: 220px;
             font-size: 28px;
             right: 30px;
+            &:hover {
+                cursor: pointer;
+                color: $primary-color;
+            }
         }
-        i:hover {
-            cursor: pointer;
-            color: $primary-color;
-            
-        }
+       
         span {
             color: rgb(40, 126, 95);
             background-color: $tertiary-color;
@@ -163,6 +168,7 @@ main {
     }
     
 }
+
 footer {
     @include flex-start();
     background-color: rgb(47, 47, 47);
@@ -199,6 +205,7 @@ footer {
         z-index: -2;
     }
 }
+/* Menu CSS */
 .menu {
     border-radius: 35px 35px 0 0;
     background-color: $background-color;
@@ -219,13 +226,13 @@ footer {
     h2 {
         font-family: $font_text;
     }
-    i {
+    .fa-heart-o {
         position: absolute;
         top: 45px;
         right: 45px;
         font-size: 20px;
     }
-    i:hover {
+    .fa-heart-o:hover {
         color: $primary-color;
     }
     .category {
@@ -249,7 +256,43 @@ footer {
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         margin: 6px 0;
         cursor: pointer;
+        /* Hovering slide in animation */
+        &:hover {
+            .tick{
+            animation: opacity 0.5s both;
+            @keyframes opacity {
+                0% {
+                  opacity: 0;
+                }
+                100% {
+                  opacity: 1;
+                }
+              }
 
+            }
+            .tick i {
+                animation: rotate-center 0.7s ease-in-out both;
+                @keyframes rotate-center {
+                    0% {
+                      transform: rotate(0);
+                    }
+                    100% {
+                      transform: rotate(360deg);
+                    }
+                  }
+            }
+            .price {
+                animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+                @keyframes slide-left {
+                0% {
+                  transform: translateX(0px);
+                }
+                100% {
+                  transform: translateX(-80px);
+                }
+              }
+            }
+        }
         h4 {
             margin: 0;
             margin-bottom: 5px;
@@ -263,9 +306,30 @@ footer {
             bottom: 16px;
             right: 16px;
         }
+        .tick {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            right: 0px;
+            height: 100%;
+            width: 14%;
+            border-radius: 0 15px 15px 0;
+            background-color: $tertiary-color;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            i {
+                color: $tertiary-color;
+                font-size: 20px;
+                padding: 3px;
+                border: 0.1px $tertiary-color solid;
+                background-color: white;
+                border-radius: 50%;
+            }
+        }
     }
-    
-}
+}    
 .btn {
     width: 40vw;
     margin: 36px 24vw;
@@ -276,4 +340,59 @@ footer {
     background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
     box-shadow: #8f8e8e 1px 3px 30px 0px;
     cursor: pointer;
+    &:hover {
+        background-image: none;
+        background-color: rgba($color: #cb6ac2, $alpha: 1);
+        box-shadow: #605f5f 1px 3px 30px 0px;
+    }
 }
+/* Loading animation */
+.item__1, .item__2, .item__3, .item__4  {
+    animation:mymove 1s ease-out;
+}
+.item__1 {
+    animation-delay: 0s;
+}
+.item__2 {
+    animation-delay: 0.2s;
+}
+.item__3 {
+    animation-delay: 0.4s;
+}
+.item__4 {
+    animation-delay: 0.6s;
+}
+@keyframes mymove  {
+    0% {
+       opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+       opacity: 1;
+    }
+} 
+//Homepage spinner CSS
+// .loader {
+//     position: fixed;
+//     top: 50%;
+//     left: 50%;
+//     //transform: translate(-50%, -50%);
+//     border: 20px solid #f3f3f3;
+//     border-radius: 50%;
+//     border-top: 20px solid $primary-color;
+//     width: 120px;
+//     height: 120px;
+//     animation: spin 2s linear infinite;
+//   }
+//   .loader::before {
+//     content: "";
+//     width: 100vw;
+//     height: 100vh;
+//     background-color: #8f8e8e;
+//   }
+//   @keyframes spin {
+//     0% { transform: rotate(0deg); }
+//     100% { transform: rotate(360deg); }
+//   }
