--- a/style.scss
+++ b/style.scss
@@ -65,7 +65,7 @@ header {
             margin-bottom: 30px;
             font-weight: 400;
         }
-        button {
+        .btn {
             margin-bottom: 40px;
             padding: 12px 20px;
             border-radius: 30px;
@@ -73,6 +73,7 @@ header {
             color: white;
             background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
             box-shadow: #8f8e8e 1px 3px 30px 0px;
+            cursor: pointer;
             &:hover {
                 background-image: none;
                 background-color: rgba($color: #cb6ac2, $alpha: 1);
@@ -145,12 +146,20 @@ main {
         p {
             margin: 12px;
         }
-        i {
+        .fa-heart {
+            display: none;
             position: absolute;
             top: 220px;
             font-size: 28px;
             right: 30px;
-            &:hover {
+        }
+        .fa-heart-o {
+            position: absolute;
+            top: 220px;
+            font-size: 28px;
+            right: 30px;
+            &:hover + .fa-heart {
+                display: block;
                 cursor: pointer;
                 color: $primary-color;
             }
@@ -226,13 +235,17 @@ footer {
     h2 {
         font-family: $font_text;
     }
-    .fa-heart-o {
+    .fa-heart-o, .fa-heart {
         position: absolute;
         top: 45px;
         right: 45px;
         font-size: 20px;
     }
-    .fa-heart-o:hover {
+    .fa-heart {
+        display: none;
+    }
+    .fa-heart-o:hover + .fa-heart{
+        display: block;
         color: $primary-color;
     }
     .category {
@@ -288,7 +301,7 @@ footer {
                   transform: translateX(0px);
                 }
                 100% {
-                  transform: translateX(-80px);
+                  transform: translateX(-40px);
                 }
               }
             }
@@ -296,10 +309,12 @@ footer {
         h4 {
             margin: 0;
             margin-bottom: 5px;
+            width: 80%;
         }
         p {
             margin: 0;
             font-weight: 100;
+            width: 75%;
         }
         span {
             position: absolute;
@@ -344,6 +359,7 @@ footer {
         background-image: none;
         background-color: rgba($color: #cb6ac2, $alpha: 1);
         box-shadow: #605f5f 1px 3px 30px 0px;
+        cursor: pointer;
     }
 }
 /* Loading animation */
@@ -374,25 +390,190 @@ footer {
     }
 } 
 //Homepage spinner CSS
-// .loader {
-//     position: fixed;
-//     top: 50%;
-//     left: 50%;
-//     //transform: translate(-50%, -50%);
-//     border: 20px solid #f3f3f3;
-//     border-radius: 50%;
-//     border-top: 20px solid $primary-color;
-//     width: 120px;
-//     height: 120px;
-//     animation: spin 2s linear infinite;
-//   }
-//   .loader::before {
-//     content: "";
-//     width: 100vw;
-//     height: 100vh;
-//     background-color: #8f8e8e;
-//   }
-//   @keyframes spin {
-//     0% { transform: rotate(0deg); }
-//     100% { transform: rotate(360deg); }
-//   }
+.spinner-background {
+    @include flex-row();
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(116, 116, 127, 0.5);
+    width: 100%;
+    height: 100%;
+    animation: fade-away 2s forwards;
+}
+@keyframes fade-away {
+    0% { opacity: 1; }
+    50% { opacity: 0.5;}
+    100% { opacity: 0; display: none;}
+  }
+
+.loader {
+    border: 20px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 20px solid $primary-color;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s forwards;
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); opacity: 1; }
+    50% { opacity: 0.5;}
+    100% { transform: rotate(360deg); opacity: 0;}
+  }
+  
+//   Responsive part 
+  @media (min-width: 769px) {
+    .btn {
+        width: 300px;
+    }
+    .section__guide {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 20px;
+        justify-content: stretch;
+        align-content: stretch;
+        margin-bottom: 0px;
+        h3 {
+            grid-column: 1/4;
+            justify-self: center;
+            font-size: 30px;
+        } 
+        div {
+            font-size: 14px;
+            margin-bottom: 0;
+        } 
+    }
+    main {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 20px;
+        justify-content: stretch;
+        align-content: stretch;
+        margin-top: 0;
+        background-color:$background-color;
+        h3 {
+            grid-column: 1/3;
+            justify-self: center;
+            font-size: 30px;
+            margin-top: 0;
+        }
+        .restaurant-1, .restaurant-3 {
+            grid-column: 1/2;
+            width: 45vw;
+            align-self: stretch;
+            justify-self: stretch;
+        }
+        .restaurant-2, .restaurant-4 {
+            grid-column: 2/3;
+            width: 45vw;
+            align-self: stretch;
+            justify-self: stretch;
+        }
+    }
+    .menu {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-auto-rows: auto;
+        gap: 12px;
+        width: 100vw;
+        grid-template-areas: 
+        "h2 h2 h2"
+        "category__1 category__2 category__3"
+        "item__a item__d item__g"
+        "item__b item__e item__h"
+        "item__c item__f item__i"
+        "item__j . ."
+        " btn btn btn";
+    }
+    h2 {
+        grid-area: h2;
+        width: 30vw;
+    }
+    .category__1 {
+        grid-area: category__1;
+    }
+    .category__2 {
+        grid-area: category__2;
+    }
+    .category__3 {
+        grid-area: category__3;
+    }
+    .item__a {
+        grid-area: item__a;
+    }
+    .item__b {
+        grid-area: item__b;
+    }
+    .item__c {
+        grid-area: item__c;
+    }
+    .item__d {
+        grid-area: item__d;
+    }
+    .item__e {
+        grid-area: item__e;
+    }
+    .item__f {
+        grid-area: item__f;
+    }
+    .item__g {
+        grid-area: item__g;
+    }
+    .item__h {
+        grid-area: item__h;
+    }
+    .item__i {
+        grid-area: item__i;
+    }
+    .item__j {
+        grid-area: item__j;
+    }
+    
+    .btn {
+        grid-area: btn;
+        align-self: center;
+        justify-self: center;
+    }
+    .category {
+        width: 30vw;
+    }
+    .menu__items {
+        width: 30vw;
+        h4 {
+            width: 90%;
+        }
+        .price {
+            font-size: 1em;
+            top: 16px;
+            right: 10px;
+        }
+        p {
+            width: 20vw;
+        }
+        .tick {
+            width: 30vw;
+            background-color: rgba(110, 221, 173, 0.8);
+            border-radius: 15px
+        }
+        &:hover {
+            .price {
+                animation: none;
+            }
+        }
+        
+    }
+  }
+  @media (min-width: 400px) and (max-width: 768px) {
+    .menu__items:hover {
+        .price {
+            animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+            @keyframes slide-left {
+            0% {
+              transform: translateX(0px);
+            }
+            100% {
+              transform: translateX(-90px);
+            }
+          }
+        }
+    }
+  }
