--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,7 @@ header {
     box-shadow: #909090 0px 0.5px 10px 0px;
     margin-bottom: 5px;
 }
-.section {
+.info {
     &__location {
         @include flex-row();
         background-color:rgb(234, 234, 234);
@@ -65,7 +65,7 @@ header {
             margin-bottom: 30px;
             font-weight: 400;
         }
-        .btn {
+        button {
             margin-bottom: 40px;
             padding: 12px 20px;
             border-radius: 30px;
@@ -75,6 +75,7 @@ header {
             box-shadow: #8f8e8e 1px 3px 30px 0px;
             cursor: pointer;
             &:hover {
+                cursor: pointer;
                 background-image: none;
                 background-color: rgba($color: #cb6ac2, $alpha: 1);
                 box-shadow: #605f5f 1px 3px 30px 0px;
@@ -82,7 +83,7 @@ header {
         }   
     }
 }
-.section__guide {
+.guide {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -309,17 +310,21 @@ footer {
         h4 {
             margin: 0;
             margin-bottom: 5px;
-            width: 80%;
+            width: 100%;
         }
         p {
             margin: 0;
             font-weight: 100;
-            width: 75%;
+            white-space: nowrap; 
+            width: 77%; 
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         span {
             position: absolute;
             bottom: 16px;
             right: 16px;
+            font-weight: 400;
         }
         .tick {
             opacity: 0;
@@ -395,7 +400,7 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(116, 116, 127, 0.5);
+    background-color: white;
     width: 100%;
     height: 100%;
     animation: fade-away 2s forwards;
